--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         </div>
         <div class="about__images">
             <img class="about__sun-image" src="img/[SW.BAND] sun.png">
-            <img class="about__solar-panel-image" src="img/solar-panel.png" </div>
+            <img class="about__solar-panel-image" src="img/solar-panel.png">
+        </div>
     </section>
     <section class="form">
         <div class="form__container">
@@ -39,7 +40,7 @@
                     <label for="email">Электронный адрес</label>
                     <input id="email" type="email" placeholder="***@yandex.ru">
                     <label for="phone">Номер телефона</label>
-                    <input type="tel" placeholder="+7 (999) 999-99-99">
+                    <input id="phone" type="tel" placeholder="+7 (999) 999-99-99">
                     <label for="budget">Примерный бюджет</label>
                     <select id="budget">
                         <option value="">Выберите вариант</option>
@@ -53,11 +54,48 @@
             </form>
         </div>
     </section>
+    <section class="features" id="features">
+        <div class="cards">
+            <div class="card__logo">
+                <img src="img/panel_icon.webp" class="card__logo_solar_panel">
+                <h3>Уменьшите счета за электричество</h3>
+                <p>Используйте чистую солнечную энергию для питания своего дома, уменьшите зависимость от электросети и счета за электричество.</p>
+            </div>
+            <div class="card__logo">
+                <img src="img/24-7.png" class="card__logo_24-7">
+                <h3>Мониторинг электроэнергии</h3>
+                <p>Управляйте своей системой солнечных панелей из любой точки мира с помощью специального мобильного приложения.</p>
+            </div>
+            <div class="card__logo">
+                <img src="img/effectivity.webp">
+                <h3>Максимальная эффективность</h3>
+                <p>Солнечные панели GreenRobotic обеспечивают максимальное производство энергии круглый год, даже на крышах со сложными углами.</p>
+            </div>
+        </div>
+        <div class="cards__border"></div>
+        <div class="feedback">
+            <div class="feedback__review">
+                <h1>Нам доверяют 5000+ счастливых клиентов</h1>
+                <p>Мы помогли тысячам людей перейти на зеленую энергию.<br/>После заказа мы позаботимся обо всем: доставка панелей, проект, установка, помощь в использовании.</p>
+            </div>
+            <div class="feedback__cards">
+                <div class="feedback__cards_economy">
+                    <h1>30 млн. ₽</h1>
+                    <p>Помогаем экономить нашим клиентам ежемесячно.</p>
+                </div>
+                <div class="feedback__cards_rating">
+                    <h1>4.7</h1>
+                    <p>Средняя оценка наших клиентов.</p>
+                </div>
+            </div>
+        </div>
+        <div class="cards__border"></div>
+    </section>
 </body>
 <footer>
     <div class="footer__container">
         <div class="footer__container_contacts">
-            <h4>Позвонить нам</h3>
+            <h4>Позвонить нам</h4>
             <a href="tel:74959999999">+7(495)-999-99-99</a>
         </div>
         <div class="footer__container_solutions">
